--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "babel": {
     "presets": [
-      "es2015-node5"
+      "es2015",
+      "react"
     ]
   },
   "scripts": {
@@ -30,13 +31,28 @@
   "homepage": "https://github.com/xubaoshi/koa-react-cnode#readme",
   "dependencies": {
     "babel-cli": "^6.16.0",
+    "babel-polyfill": "^6.16.0",
     "babel-preset-es2015-node5": "^1.2.0",
+    "history": "^4.3.0",
     "koa": "^1.2.4",
+    "koa-router": "^5.4.0",
+    "koa-static": "^2.0.0",
     "react": "^15.3.2",
+    "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
-    "react-router": "^2.8.1"
+    "react-router": "^2.8.1",
+    "redux": "^3.6.0",
+    "redux-router": "^2.1.2"
   },
   "devDependencies": {
+    "babel-core": "^6.17.0",
+    "babel-loader": "^6.2.5",
+    "babel-plugin-transform-class-properties": "^6.16.0",
+    "babel-polyfill": "^6.16.0",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-2": "^6.17.0",
+    "babel-register": "^6.16.3",
     "extract-text-webpack-plugin": "^1.0.1",
     "merge": "^1.2.0",
     "webpack": "^1.13.2",
