--- a/package.json
+++ b/package.json
@@ -42,7 +42,10 @@
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
     "redux": "^3.6.0",
-    "redux-router": "^2.1.2"
+    "redux-logger": "^2.7.0",
+    "redux-router": "^2.1.2",
+    "redux-thunk": "^2.1.0",
+    "redux-undo": "^0.6.1"
   },
   "devDependencies": {
     "babel-core": "^6.17.0",
@@ -55,6 +58,7 @@
     "babel-register": "^6.16.3",
     "extract-text-webpack-plugin": "^1.0.1",
     "merge": "^1.2.0",
+    "redux-devtools": "^3.3.1",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.16.2"
   }
